--- a/build.gradle
+++ b/build.gradle
@@ -22,23 +22,17 @@ group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-
 archivesBaseName = "modid"
 
 minecraft {
-    version = "1.7.10-10.13.2.1232"
+    version = "1.8-11.14.0.1247-1.8"
     runDir = "eclipse"
+    
+    // the mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   snapshot are built nightly.
+    // stable_#            stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not allways work.
+    // simply re-run your setup task after changing the mappings to update your workspace.
+    mappings = "snapshot_nodoc_20140930"
 }
-task deobfJar(type: Jar) { // Generate deobfuscated
-    from sourceSets.main.output
-    classifier = 'deobf'
-}
-task sourceJar(type: Jar) { // Generate sources
-    from sourceSets.main.allSource
-    classifier = 'sources'
-}
-tasks.build.dependsOn('sourceJar', 'deobfJar')
-artifacts {
-    archives deobfJar
-    archives sourceJar
-    archives jar
-}
+
 dependencies {
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
