--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,11 @@ buildscript {
 apply plugin: 'forge'
 
 version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+group= "the_fireplace.netheressence" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "netheressence"
 
 minecraft {
-    version = "1.8-11.14.1.1306"
+    version = "1.8-11.14.1.1338"
     runDir = "eclipse"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -30,7 +30,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_nodoc_20141130"
+    mappings = "snapshot_20141130"
 }
 
 dependencies {
