--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,11 @@ buildscript {
 apply plugin: 'forge'
 
 version = "1.0"
-group= "the_fireplace.netheressence" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "netheressence"
+group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "modid"
 
 minecraft {
-    version = "1.8-11.14.1.1338"
+    version = "1.8-11.14.3.1486"
     runDir = "eclipse"
     
     // the mappings can be changed at any time, and must be in the following format.
