--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-/*
+
 // For those who want the bleeding edge
 buildscript {
     repositories {
@@ -9,24 +9,24 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.0-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
-*/
+apply plugin: 'scala'
+
 
 // for people who want stable
-plugins {
+/*plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
-}
-apply plugin: 'scala'
+}*/
 
 version = "1.0"
 group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "modid"
 
 minecraft {
-    version = "1.8-11.14.4.1563"
+    version = "1.8.8-11.14.4.1579-1.8.8"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -34,7 +34,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20141130"
+    mappings = "snapshot_20151122"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
