--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,20 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'scala'
 
+allprojects {
+    sourceCompatibility = 1.7
+    targetCompatibility = 1.7
+}
+
 curseforge {
   apiKey = project.curseForgeApiKey
   project {
     id = '238223'
     changelog = file('changelog.txt')
-    releaseType = 'beta'
-	addGameVersion '1.8.9'
+    releaseType = 'release'
+	addGameVersion '1.9'
+	addGameVersion 'Java 7'
+	addGameVersion 'Java 8'
     mainArtifact jar
   }
 }
@@ -33,9 +40,9 @@ group= "the_fireplace.netheressence"
 archivesBaseName = "NetherEssence"
 
 minecraft {
-    version = "1.8.9-11.15.0.1697"
+    version = "1.9-12.16.0.1811-1.9"
     runDir = "run"
-    mappings = "stable_20"
+    mappings = "snapshot_20160312"
 }
 
 dependencies {
