--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,14 @@ buildscript {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
+        maven {
+            name = "Modmuss50"
+            url = "http://maven.modmuss50.me/"
+        }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath 'ModsIOUpload:ModsIOUpload:+'
     }
 }
 
@@ -15,11 +20,12 @@ plugins {
     id "com.matthewprenger.cursegradle" version "1.0.4"
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.cazzar.gradle.modsio'
 apply plugin: 'scala'
 
 allprojects {
-    sourceCompatibility = 1.7
-    targetCompatibility = 1.7
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 }
 
 curseforge {
@@ -28,8 +34,9 @@ curseforge {
     id = '238223'
     changelog = file('changelog.txt')
     releaseType = 'release'
+    addGameVersion '1.10.2'
+	addGameVersion '1.10'
 	addGameVersion '1.9.4'
-	addGameVersion 'Java 7'
 	addGameVersion 'Java 8'
     mainArtifact jar
   }
@@ -37,10 +44,22 @@ curseforge {
 
 version = "!!VERSION!!"
 group= "the_fireplace.netheressence"
-archivesBaseName = "NetherEssence"
+archivesBaseName = "NetherEssence-Forge"
+
+modsIO {
+    key = project.modsioApiKey
+    project{
+		artifact = new File(jar.destinationDir, archivesBaseName+"-"+version+".jar")
+		modid = "1224"
+		minecraft = "1.10.2"
+		try{changelog = file('changelog.txt').text}catch(Exception e){changelog=""}
+		tag = ""
+		current = true
+    }
+}
 
 minecraft {
-    version = "1.9.4-12.17.0.1909-1.9.4"
+    version = "1.10.2-12.18.0.2004-1.10.0"
     runDir = "run"
     mappings = "snapshot_20160518"
 }
