--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,6 @@ build:
   - ./gradlew assemble
   - cp $ORIG_ARTIFACTS .
   when: on_success
-  only:
-  - triggers
   artifacts:
     name: "NetherEssence-Forge-$(cat $CACHE_DIR/.version)"
     paths:
@@ -37,9 +35,7 @@ deploy:
   stage: deploy
   script:
   - ./gradlew uploadArchives curseforge uploadToModsIO -PcurseForgeApiKey=$curseForgeApiKey -PmodioApiKey=$modioApiKey
-  when: on_success
-  only:
-  - triggers
+  when: manual
 
 cleanup:
   stage: cleanup
@@ -48,5 +44,3 @@ cleanup:
   - rm -vf $ARTIFACTS
   - mkdir -p $CACHE_DIR $CACHE_DIR2
   when: always
-  only:
-  - triggers
