--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,34 +13,19 @@ cache:
  untracked: false
 
 stages:
-- build
 - deploy
-- cleanup
 
 before_script:
   - shopt -s extglob
-  
-build:
-  stage: build
-  script:
-  - ./gradlew assemble
-  - cp $ORIG_ARTIFACTS .
-  when: on_success
-  artifacts:
-    name: "NetherEssence-Forge-$(cat $CACHE_DIR/.version)"
-    paths:
-    - $ARTIFACTS
     
 deploy:
   stage: deploy
   script:
-  - ./gradlew uploadArchives curseforge uploadToModsIO -PcurseForgeApiKey=$curseForgeApiKey -PmodioApiKey=$modioApiKey
-  when: manual
-
-cleanup:
-  stage: cleanup
-  script:
+  - ./gradlew build uploadArchives curseforge uploadToModsIO -PcurseForgeApiKey=$curseForgeApiKey -PmodioApiKey=$modioApiKey
+  - cp $ORIG_ARTIFACTS .
   - ./gradlew clean
-  - rm -vf $ARTIFACTS
-  - mkdir -p $CACHE_DIR $CACHE_DIR2
-  when: always
+  when: manual
+  artifacts:
+    name: "NetherEssence-Forge-$(cat $CACHE_DIR/.version)"
+    paths:
+    - $ARTIFACTS
