--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,26 +14,14 @@ cache:
 
 stages:
 - deploy
-- cleanup
-
-before_script:
-  - shopt -s extglob
     
 deploy:
   stage: deploy
   script:
-  - ./gradlew build uploadArchives curseforge uploadToModsIO -PcurseForgeApiKey=$curseForgeApiKey -PmodsioApiKey=$modsioApiKey
+  - ./gradlew clean build uploadArchives curseforge uploadToModsIO -PcurseForgeApiKey=$curseForgeApiKey -PmodsioApiKey=$modsioApiKey
   - cp $ORIG_ARTIFACTS .
   when: manual
   artifacts:
     name: "NetherEssence-Forge-$(cat $CACHE_DIR/.version)"
     paths:
     - $ARTIFACTS
-
-cleanup:
-  stage: cleanup
-  script:
-  - ./gradlew clean
-  - rm -vf $ARTIFACTS
-  - mkdir -p $CACHE_DIR $CACHE_DIR2
-  when: manual
