--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 }
 
 plugins {
-    id "com.matthewprenger.cursegradle" version "1.0.8"
+    id "com.matthewprenger.cursegradle" version "1.0.9"
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'net.cazzar.gradle.modsio'
@@ -32,13 +32,15 @@ allprojects {
 
 version = "7.1.1"
 group= "the_fireplace.netheressence"
-archivesBaseName = "NetherEssence-Forge-1.12.2"
+archivesBaseName = "NetherEssence-1.12.2"
 
 minecraft {
-    version = "1.12-14.21.1.2387"
+    version = "1.12.2-14.23.0.2503"
     runDir = "run"
     replace '${version}', project.version
-    mappings = "snapshot_20171002"
+    mappings = "snapshot_20170815"
+	
+	clientRunArgs += "--uuid=0b1ec5ad-cb2a-43b7-995d-889320eb2e5b --username=The_Fireplace"
 }
 
 dependencies {
@@ -97,6 +99,8 @@ curseforge {
     changelog = file("changelog.txt")
     releaseType = 'release'
     addGameVersion '1.12.2'
+    addGameVersion '1.12.1'
+    addGameVersion '1.12'
 	addGameVersion 'Java 8'
 
     mainArtifact(jar) {
@@ -138,15 +142,15 @@ uploadArchives {
                         name project.archivesBaseName
                         packaging "jar"
                         description "Nether Essence"
-                        url "https://github.com/The-Fireplace/Nether-Essence"
+                        url "https://github.com/The-Fireplace-Minecraft-Mods/Nether-Essence"
                         issueManagement {
                             system "github"
-                            url "https://github.com/The-Fireplace/Nether-Essence/issues"
+                            url "https://github.com/The-Fireplace-Minecraft-Mods/Nether-Essence/issues"
                         }
                         licenses {
                             license {
                                 name "License"
-                                url "https://github.com/The-Fireplace/Nether-Essence/blob/master/LICENSE"
+                                url "https://github.com/The-Fireplace-Minecraft-Mods/Nether-Essence/blob/master/LICENSE"
                                 distribution "repo"
                             }
                         }
