--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 }
 
 plugins {
-    id "com.matthewprenger.cursegradle" version "1.0.9"
+    id "com.matthewprenger.cursegradle" version "1.1.0"
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'net.cazzar.gradle.modsio'
@@ -35,10 +35,10 @@ group= "the_fireplace.netheressence"
 archivesBaseName = "NetherEssence-1.12.2"
 
 minecraft {
-    version = "1.12.2-14.23.0.2503"
+    version = "1.12.2-14.23.5.2768"
     runDir = "run"
     replace '${version}', project.version
-    mappings = "snapshot_20170815"
+    mappings = "stable_39"
 	
 	clientRunArgs += "--uuid=0b1ec5ad-cb2a-43b7-995d-889320eb2e5b --username=The_Fireplace"
 }
@@ -99,8 +99,6 @@ curseforge {
     changelog = file("changelog.txt")
     releaseType = 'release'
     addGameVersion '1.12.2'
-    addGameVersion '1.12.1'
-    addGameVersion '1.12'
 	addGameVersion 'Java 8'
 
     mainArtifact(jar) {
